# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tekoalynkaytto.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoly_chart.md
src/: app.py  db_helper.py
src/repositories/: auth_repository.py  budget_repository.py
src/services/: auth_service.py  balance_service.py  budget_service.py  expenses_service.py  login_service.py
src/tests/: auth_service_test.py  balance_service_test.py  budget_service_test.py  expenses_service_test.py  login_service_test.py
src/ui/: balance_view.py  expenses_view.py  home_view.py  login_view.py  register_view.py
